# Copyright 2025 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")

group("all") {
  deps = [ ":desktop_ota_recovery" ]
}

executable("desktop_ota_recovery") {
  sources = [ "main.cpp" ]
}
